--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,10 @@
     "baseUrl": ".",
     "types": ["vitest/globals"],
     "paths": {
-      "@layouts/*": ["./src/layouts/*"],
-      "@mockdata/*": ["./src/mockdata/*"],
-      "@pages/*": ["./src/pages/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@mockdata/*": ["src/mockdata/*"],
+      "@pages/*": ["src/pages/*"],
+      "@components/*": ["src/components/*"],
 
     }
   }
